spring-cloud-kubernetes-integration-tests/spring-cloud-kubernetes-discoveryclient-it/src/test/resources/server/spring-cloud-kubernetes-discoveryserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-cloud-kubernetes-discoveryserver
  name: spring-cloud-kubernetes-discoveryserver
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8761
  selector:
    app: spring-cloud-kubernetes-discoveryserver
  type: ClusterIP
